<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fondoSeg"
    android:orientation="vertical"
    tools:context="com.studios.patota.homecontrol.MainActivitySeguridad"
    android:weightSum="1">


    <TextView
        android:id="@+id/Titulo"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/Seg"
        android:textAlignment="center"
        android:textColor="@color/colorMenu"
        android:textSize="30dp" />


    <Button
        android:id="@+id/BtnCerrar"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnslec5"
        android:text="@string/btnCerrar"
        android:textAlignment="center"
        android:textColor="@color/colorSegDark"
        android:textSize="30dp"  />








    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="0.33">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="185dp"
        android:layout_height="450dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:orientation="vertical">



        <Button
            android:id="@+id/btnGr"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorMenu"
            android:background="@drawable/btnslec4"
            android:text="Grabar" />

        <Button
            android:id="@+id/btnContac"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorMenu"
            android:background="@drawable/btnslec4"
            android:text="Contactos" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="129dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_border"
            app:srcCompat="@drawable/seg">

        </ImageView>






    </LinearLayout>

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="450dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnPoli"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorMenu"
            android:background="@drawable/btnslec5"
            android:text="Policia" />

        <Button
            android:id="@+id/btnCm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorMenu"
            android:background="@drawable/btnslec4"
            android:text="Camaras" />

        <Button
            android:id="@+id/btnBom"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorMenu"
            android:background="@drawable/btnslec4"
            android:text="Bomberos" />


    </LinearLayout>
    </RelativeLayout>



    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:onClick="Salir"
        android:background="@drawable/btnslec1"
        android:layout_marginTop="10dp"
        android:text="@string/btnRegresar" />


</LinearLayout>
